--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="cs">
 <head>
   <meta charset="UTF-8">
-  <title>DoPlo12cz – WEB</title>
+  <title>Informace - DoPlo12cz</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
   <style>
@@ -144,4 +144,5 @@
   </script>
 </body>
 </html>
+
 
