--- a/index.html
+++ b/index.html
@@ -43,17 +43,18 @@
       justify-content: center;
       gap: 20px;
       margin-bottom: 20px;
+      flex-wrap: wrap;
     }
     .links a {
       display: flex;
       align-items: center;
       justify-content: center;
-      width: 50px;
-      height: 50px;
+      width: 60px;
+      height: 60px;
       border-radius: 50%;
       background-color: #fff;
       color: #000;
-      font-size: 24px;
+      font-size: 26px;
       text-decoration: none;
       transition: transform 0.2s, background-color 0.2s;
     }
@@ -66,14 +67,14 @@
     .hobby-button {
       display: block;
       width: 100%;
-      margin-top: 10px;
-      padding: 14px 25px;
-      font-size: 16px;
+      margin-top: 15px;
+      padding: 16px 25px;
+      font-size: 18px;
       border: none;
       border-radius: 10px;
       cursor: pointer;
       font-family: 'Poppins', sans-serif;
-      font-weight: 500;
+      font-weight: 600;
       text-transform: uppercase;
       transition: transform 0.2s, background-color 0.2s;
       background-color: #000;
@@ -99,10 +100,10 @@
     .hobbies-panel.show {
       max-height: 500px;
       opacity: 1;
-      padding: 15px;
+      padding: 20px;
     }
     .hobbies-panel h3 {
-      margin-bottom: 10px;
+      margin-bottom: 12px;
       text-align: center;
       text-transform: uppercase;
     }
@@ -112,32 +113,38 @@
     }
     .hobbies-panel ul li {
       text-transform: uppercase;
-      margin-bottom: 5px;
+      margin-bottom: 8px;
+      font-size: 16px;
     }
 
-    /* 🔹 Responsivní úpravy */
+    /* 📱 Responsivní úpravy pro mobily */
     @media (max-width: 600px) {
+      body { padding: 10px; }
       .card {
         max-width: 100%;
-        padding: 25px;
+        width: 100%;
+        padding: 30px 20px;
       }
       .card img {
-        width: 100px;
-        height: 100px;
+        width: 140px;
+        height: 140px;
       }
-      .card h1 { font-size: 24px; }
-      .card p { font-size: 14px; }
+      .card h1 { font-size: 26px; }
+      .card p { font-size: 15px; }
       .links {
-        gap: 15px;
+        gap: 25px;
       }
       .links a {
-        width: 45px;
-        height: 45px;
-        font-size: 20px;
+        width: 75px;
+        height: 75px;
+        font-size: 34px;
       }
       .hobby-button {
-        font-size: 14px;
-        padding: 12px 20px;
+        font-size: 20px;
+        padding: 20px;
+      }
+      .hobbies-panel ul li {
+        font-size: 18px;
       }
     }
   </style>
@@ -177,6 +184,8 @@
   </script>
 </body>
 </html>
+
+
 
 
 
