--- a/index.html
+++ b/index.html
@@ -122,32 +122,32 @@
       line-height: 1.5;
     }
 
-    /* 📱 Responsivní úpravy */
+    /* 📱 Mobilní úpravy */
     @media (max-width: 600px) {
       body { padding: 10px; }
       .card {
         max-width: 100%;
         width: 100%;
-        padding: 30px 20px;
+        padding: 25px 15px;
       }
       .card img {
-        width: 140px;
-        height: 140px;
+        width: 120px;
+        height: 120px;
       }
-      .card h1 { font-size: 26px; }
-      .card p { font-size: 15px; }
-      .links { gap: 25px; }
+      .card h1 { font-size: 24px; }
+      .card p { font-size: 14px; }
+      .links { gap: 20px; }
       .links a {
-        width: 75px;
-        height: 75px;
-        font-size: 34px;
+        width: 60px;
+        height: 60px;
+        font-size: 28px;
       }
       .toggle-button {
-        font-size: 20px;
-        padding: 20px;
+        font-size: 16px;
+        padding: 14px 20px;
       }
       .toggle-panel ul li, 
-      .toggle-panel p { font-size: 17px; }
+      .toggle-panel p { font-size: 15px; }
     }
   </style>
 </head>
@@ -196,3 +196,5 @@
   </script>
 </body>
 </html>
+
+
