--- a/index.html
+++ b/index.html
@@ -125,11 +125,11 @@
       line-height: 1.5;
     }
 
-    /* mobil */
+    /* mobilní úpravy a pozadí galaxie */
     @media (max-width: 600px) {
       body { 
         padding: 10px;
-        background: url('https://cdn.vectorstock.com/i/preview-1x/42/59/a-galaxy-space-sky-with-stars-and-nebula-vector-25564259.jpg') no-repeat center center fixed;
+        background: url('https://cdn.vectorstock.com/i/preview-1x/42/59/a-galaxy-space-sky-with-stars-and-nebula-vector-25564259.jpg') no-repeat center center;
         background-size: cover;
       }
       .card { max-width: 100%; width: 100%; padding: 25px 15px; }
