--- a/index.html
+++ b/index.html
@@ -138,7 +138,15 @@
       .card p { font-size: 14px; }
       .links { gap: 20px; }
       .links a { width: 60px; height: 60px; font-size: 28px; }
-      .toggle-button { font-size: 16px; padding: 14px 20px; }
+
+      /* zesvětlení buttonů pro mobil */
+      .toggle-button {
+        font-size: 16px;
+        padding: 14px 20px;
+        background-color: rgba(255,255,255,0.85);
+        color: #000;
+      }
+
       .toggle-panel ul li, .toggle-panel p { font-size: 15px; }
     }
   </style>
